[project]
name = "graphdemo"
version = "0.1.0"
description = "Generates json for use when diffing EBB shadow info"
authors = [{name = "Matt Rixman", email = "matt.rixman@clover.com"}]
requires-python = ">=3.12"
dependencies = [
    "networkx>=3.5",
    "pydantic>=2.11.7",
    "pytest>=8.4.1",
]

[project.scripts]
hello = "demo.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/demo"]

[tool.uv]
dev-dependencies = []
